# cpp_raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  aabb.h  basic_image_ppm_test.cpp  box.h  bvh.h  bvh_node.h  camera.h  hittable.h  image.h  interval.h  main.cpp  material.h  parallelogram.h  part_10_metal_and_lambertian_spheres.cpp  part_10_metal_and_lambertian_spheres.ppm  part_11_now_with_dielectrics.cpp  part_11_now_with_dielectrics.ppm  part_12_adjustable_camera.cpp  part_12_adjustable_camera.ppm  part_4_simple_camera_test.cpp  part_4_simple_camera_test.ppm  part_5_camera_sphere_test.cpp  part_6_2_basic_scene_test.cpp  part_6_2_basic_scene_test.ppm  part_6_sphere_surface_normal_shading.cpp  part_6_sphere_surface_normal_shading.ppm  part_9_diffuse_reflection_test.cpp  part_9_diffuse_reflection_test.ppm  part_9_diffuse_reflection_test_true_lambertian_gamma_corrected.ppm  part_9_diffuse_reflection_test_without_shadow_acne.ppm  progressbar.h  rand_util.h  ray3d.h  rgb.h  scene.h  sphere.h  (+3 more)
include/acceleration/: aabb.h  bvh.h
include/base/: camera.h  hittable.h  material.h  scene.h
include/math/: ray3d.h  vec3d.h
include/shapes/: box.h  parallelogram.h  shapes.h  sphere.h
include/util/: image.h  progressbar.h  rand_util.h  rgb.h  time_util.h
previous_parts/: part_10_metal_and_lambertian_spheres.cpp  part_10_metal_and_lambertian_spheres_with_fuzzy_reflection.ppm  part_11_now_with_dielectrics.cpp  part_1_basic_image_ppm.cpp  part_5_camera_sphere_test.cpp  part_6_2_basic_scene_test.cpp  part_9_diffuse_reflection_test.cpp  part_9_diffuse_reflection_test_true_lambertian.ppm
src/: Makefile  aabb.h  bvh.h  camera.h  hittable.h  image.h  interval.h  main.cpp  parallelogram.h  progressbar.h  rgb.h  scene.h  sphere.h  time_util.h  vec3d.h
